feat: route to list our servers
